--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,46 @@
 #mongodb://<dbuser>:
 #<dbpassword>@ds119020.mlab.com:19020/primera
 
-
+####################################################################################
 #este es el servidor de tomcat
 server.port=9000
+# ===============================
+# Del datasource
+# ===============================
+# Mysql
+spring.datasource.url = jdbc:mysql://localhost:3306/mysql?zeroDateTimeBehavior=convertToNull
+#Oracle
+#spring.datasource.url = jdbc:oracle:thin:@localhost:1521:orcl
+
+# Usuario y password para mysql
+spring.datasource.username = root
+
+#Para Wamp Server comentar el password, si es que no lo tiene 
+spring.datasource.password = root
+
+# Usuario y password para oracle
+#spring.datasource.username = system
+#spring.datasource.password = system
+
+# Para mantener la conexion activa en produccion
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql = true
+# Este es para que hibernate haga un update ante las operaciones
+
+
+# Estrategia de nombre de JPA
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Asignando el dialecto de la abse de datos. en este caso es para MySQL
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+######################################################################################
 #aqui empieza la configuracion de el enlace con mongoDB
 spring.data.mongodb.host=ds119370.mlab.com
 #Puerto
